fix wrapping on dashboard

--- a/src/clincoded/static/scss/clincoded/modules/_curator.scss
+++ b/src/clincoded/static/scss/clincoded/modules/_curator.scss
@@ -304,6 +304,7 @@
             padding: 8px 20px 8px 25px;
             border-top: 1px solid #ddd;
             list-style: none;
+            word-wrap: break-word;
         }
 
         li:nth-last-child(1) {
